# Local_AI_Agent

./: .gitignore  HF_Model_Testing.ipynb  Multi_modal_RAG_w_Vision_Model.ipynb  PDF_multimodal_agent.ipynb  PDF_multimodal_agent_old.ipynb  README.md  ReAct_Agent_Acthitecture.ipynb  ReAct_Agent_Architecture.ipynb  basic_chatbot.ipynb  langchain_multimodal.ipynb  main.py  pyproject.toml  requirement.txt  test.ipynb  test.py
Basic_Chatbot/: basic_chatbot.ipynb
Debugging/: debugging.ipynb
MCP/: math_server.py  mcp_client.py  weather.py
Multi_Agent/: 1_multiagent.ipynb  2_SupervisorMultiAIAgent.ipynb
