[project]
name = "local-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.1.1",
    "faiss-cpu>=1.12.0",
    "hf-xet>=1.1.10",
    "ipykernel>=6.30.1",
    "ipython>=9.6.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.30",
    "langchain-core>=0.3.77",
    "langchain-groq>=0.3.8",
    "langchain-mcp-adapters>=0.1.10",
    "langchain-openai>=0.3.34",
    "langchain-tavily>=0.2.11",
    "langgraph>=0.6.8",
    "langsmith>=0.4.31",
    "lxml>=6.0.2",
    "mcp>=1.16.0",
    "pillow>=11.3.0",
    "poppler-utils>=0.1.0",
    "pymupdf>=1.26.4",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.2",
    "sentence-transformers>=5.1.1",
    "streamlit>=1.50.0",
    "tiktoken>=0.11.0",
    "torch>=2.8.0",
    "transformers>=4.57.0",
    "unstructured[all-docs]>=0.18.15",
]
